# soulmachines-orchestration-fastapi

./: .env  LICENSE.txt  README.md  pyproject.toml
src/: __init__.py  controller.py  models.py  server.py
